--- a/src/presentation/templates/paymentTrip.html
+++ b/src/presentation/templates/paymentTrip.html
@@ -1,7 +1,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Confirm Trip</title>
+    <title>Checkout</title>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/bootstrap.min.css') }}"/>
 </head>
 <body>
@@ -9,15 +9,15 @@
 
 <section class="my-5 jumbotron text-center" style="background-color: white; height: 300px">
     <div class="pt-5 container">
-        <h1 class="jumbotron-heading" style="font-weight: 300">Confirm trip.</h1>
-        <p class="lead text-muted">Reviews the trip's informations before payment.</p>
+        <h1 class="jumbotron-heading" style="font-weight: 300">Checkout.</h1>
+        <p class="lead text-muted">Reviews the lift's informations before payment.</p>
     </div>
 </section>
 
 <div class="py-5 bg-light">
     <div class="card mb-4 container" style="width: 60%">
         <div class="card-body text-center">
-            <h2 class="display-4">Trip's informations</h2>
+            <h2 class="display-4">Lift's informations</h2>
             <div class="px-5 py-3 card-text">
                 <p class="my-4 h5">
                     <svg class="bi bi-person" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
@@ -87,7 +87,7 @@
     </div>
 </div>
 
-<div class="py-5 bg-light">
+<div class="py-3 bg-light">
     <div class="card mb-4 container" style="width: 60%">
         <div class="card-body text-center">
             <h2 class="display-4">Car's informations</h2>
@@ -134,6 +134,14 @@
                     Color: <span class="mx-3">{{ car[5] }}</span>
                 </p>
             </div>
+        </div>
+    </div>
+</div>
+
+<div class="py-3 bg-light">
+    <div class="container" style="width: 100%">
+        <div class="justify-content-end">
+            <a href="confirmtrip" class="btn btn-primary my-2" style="width: 300px">Confirm</a>
         </div>
     </div>
 </div>
