--- a/src/presentation/templates/confirmtrip.html
+++ b/src/presentation/templates/confirmtrip.html
@@ -10,8 +10,68 @@
 <section class="my-5 jumbotron text-center" style="background-color: white; height: 300px">
     <div class="pt-5 container">
         <h1 class="jumbotron-heading" style="font-weight: 300">Confirmation.</h1>
-        <p class="lead text-muted">Here is the summary of the lift you just booked with additional information about your driver. Don't worry the summary is available in your profile.</p>
+        <p class="lead text-muted">Thank you for choosing WeLift! The transaction has been debited to your account and your lift is booked. Here are some additional information about your driver. The lift's summary is available in your profile.</p>
     </div>
 </section>
+
+<div class="py-5 bg-light">
+    <div class="card mb-4 container" style="width: 60%">
+        <div class="card-body text-center">
+            <h2 class="display-4">Balance</h2>
+            <div class="px-5 py-3 card-text">
+                <p class="my-4 h5">
+                    <svg class="bi bi-credit-card" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" d="M14 3H2a1 1 0 00-1 1v8a1 1 0 001 1h12a1 1 0 001-1V4a1 1 0 00-1-1zM2 2a2 2 0 00-2 2v8a2 2 0 002 2h12a2 2 0 002-2V4a2 2 0 00-2-2H2z" clip-rule="evenodd"/>
+                        <rect width="3" height="3" x="2" y="9" rx="1"/>
+                        <path d="M1 5h14v2H1z"/>
+                    </svg>
+                    Your balance: <span class="mx-3">{{ userBalance }}$</span>
+                </p>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="py-3 bg-light">
+    <div class="card mb-4 container" style="width: 60%">
+        <div class="card-body text-center">
+            <h2 class="display-4">Driver's information</h2>
+            <div class="px-5 py-3 card-text">
+                <p class="my-4 h5">
+                    <svg class="bi bi-person" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" d="M13 14s1 0 1-1-1-4-6-4-6 3-6 4 1 1 1 1h10zm-9.995-.944v-.002.002zM3.022 13h9.956a.274.274 0 00.014-.002l.008-.002c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664a1.05 1.05 0 00.022.004zm9.974.056v-.002.002zM8 7a2 2 0 100-4 2 2 0 000 4zm3-2a3 3 0 11-6 0 3 3 0 016 0z" clip-rule="evenodd"/>
+                    </svg>
+                    Name: <span class="mx-3">{{ driver[3] }} {{ driver[4] }}</span>
+                </p>
+                <p class="my-4 h5">
+                    <svg class="bi bi-phone" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" d="M11 1H5a1 1 0 00-1 1v12a1 1 0 001 1h6a1 1 0 001-1V2a1 1 0 00-1-1zM5 0a2 2 0 00-2 2v12a2 2 0 002 2h6a2 2 0 002-2V2a2 2 0 00-2-2H5z" clip-rule="evenodd"/>
+                        <path fill-rule="evenodd" d="M8 14a1 1 0 100-2 1 1 0 000 2z" clip-rule="evenodd"/>
+                    </svg>
+                    Phone: <span class="mx-3">{{ driver[8] }}</span>
+                </p>
+                <p class="my-4 h5">
+                    <svg class="bi bi-tag-fill" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" d="M2 1a1 1 0 00-1 1v4.586a1 1 0 00.293.707l7 7a1 1 0 001.414 0l4.586-4.586a1 1 0 000-1.414l-7-7A1 1 0 006.586 1H2zm4 3.5a1.5 1.5 0 11-3 0 1.5 1.5 0 013 0z" clip-rule="evenodd"/>
+                    </svg>
+                    Gender: <span class="mx-3">{{ driver[5] }}</span>
+                </p>
+                <p class="my-4 h5">
+                    <svg class="bi bi-gift-fill" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" d="M10 1a1.5 1.5 0 00-1.5 1.5c0 .098.033.16.12.227.103.081.272.15.49.2A3.44 3.44 0 009.96 3h.015L10 2.999l.025.002h.014A2.569 2.569 0 0010.293 3c.17-.006.387-.026.598-.073.217-.048.386-.118.49-.199.086-.066.119-.13.119-.227A1.5 1.5 0 0010 1zm0 3h-.006a3.535 3.535 0 01-.326 0 4.435 4.435 0 01-.777-.097c-.283-.063-.614-.175-.885-.385A1.255 1.255 0 017.5 2.5a2.5 2.5 0 015 0c0 .454-.217.793-.506 1.017-.27.21-.602.322-.885.385a4.434 4.434 0 01-1.104.099H10z" clip-rule="evenodd"/>
+                        <path fill-rule="evenodd" d="M6 1a1.5 1.5 0 00-1.5 1.5c0 .098.033.16.12.227.103.081.272.15.49.2A3.44 3.44 0 005.96 3h.015L6 2.999l.025.002h.014l.053.001a3.869 3.869 0 00.799-.076c.217-.048.386-.118.49-.199.086-.066.119-.13.119-.227A1.5 1.5 0 006 1zm0 3h-.006a3.535 3.535 0 01-.326 0 4.435 4.435 0 01-.777-.097c-.283-.063-.614-.175-.885-.385A1.255 1.255 0 013.5 2.5a2.5 2.5 0 015 0c0 .454-.217.793-.506 1.017-.27.21-.602.322-.885.385a4.435 4.435 0 01-1.103.099H6zm9 10.5V7H8.5v9h5a1.5 1.5 0 001.5-1.5zM7.5 16h-5A1.5 1.5 0 011 14.5V7h6.5v9z" clip-rule="evenodd"/>
+                        <path d="M0 4a1 1 0 011-1h14a1 1 0 011 1v1a1 1 0 01-1 1H1a1 1 0 01-1-1V4z"/>
+                    </svg>
+                    Birthdate: <span class="mx-3">{{ driver[6] }}</span>
+                </p>
+            </div>
+        </div>
+    </div>
+</div>
+
+<footer class="my-5 pt-5 text-muted text-center text-small">
+    <p class="mb-1">&copy; 2019-2020 WeLift</p>
+</footer>
+
 </body>
 </html>
